# advent-of-code

./: .gitignore
2019/: 02.py  03.py  03.txt  04.py  04.txt  05.py  06.py  06.txt  07.py  08.py  IntCode.py  Intcode.py
2019/docs/: 05.txt  08.txt
aoc2019/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  intcode.py  tests.py
aoc2019/docs/: 01.txt  02.txt  07.txt  09.txt  10.txt
aoc2020/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py
aoc2020/docs/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt
aoc2023/: day01.py  day02.py  day03.py  day04.py  day05.py
aoc2023/docs/: 01.txt  02.txt  03.txt  04.txt  05.txt
aoc2024/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py
aoc2024/docs/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt
aoc2025/rust/: Cargo.toml
aoc2025/rust/.cargo/: config.toml
aoc2025/rust/docs/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt
aoc2025/rust/resources/: example06.txt
aoc2025/rust/src/: main.rs
aoc2025/rust/src/common/: utils.rs
aoc2025/rust/src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs
